--- a/index3.html
+++ b/index3.html
@@ -21,7 +21,7 @@
         </header>
 
         <div class="hero container">
-            <img src="img/NewChapter.png" alt="">
+            <img src="img/вопрос.jpg" alt="">
             <div class="Id_0">
                 <h5></h5>
                 <li><a href='ind_0.html'>Вводный Лист</a></li>
@@ -30,7 +30,7 @@
 
         </div>
         <div class="hero2 container">
-            <img src="img/1.png" alt="">
+            <img src="img/1.jpg" alt="">
             <div class="Id_1">
                 <h5></h5>
                 <li><a href='ind_1.html'>Первые Сюрпризы</a></li>
