--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <h3></h3>
             <h4>Новые Части</h4>
-            <img src="img/1.png" alt="">
+            <img src="img/1.jpg" alt="">
             <li><a href='ind_1.html'>Перейти</a></li>
 
         </div>
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
