--- a/ind_1.html
+++ b/ind_1.html
@@ -25,10 +25,12 @@
                 <h7>Первые Сюрпризы</h7>
                 <h8>Глава I</h8>
                 <textarea class='textarea'cols=87 disabled="on" readonly="on" autofocus rows="97" >Утро первого сентября началось как обычно.
-Без всяких излишек вы напрямую идёте к себе в кабинет, по пути снова встречаясь с неизвестной захватчицей, идущей со стороны вашего кабинета.
+Без всяких излишек вы напрямую идёте к себе в кабинет,
+по пути снова встречаясь с неизвестной захватчицей, идущей со стороны вашего кабинета.
 
 
-Готовясь к предстоящим урокам, вам кажется, как небольшой холодок окутывает ваше тело. Взглянув на дверь, вы замечаете причину.
+Готовясь к предстоящим урокам, вам кажется, как небольшой холодок окутывает ваше тело.
+Взглянув на дверь, вы замечаете причину.
 
 -Здравствуйте!
 
@@ -57,7 +59,8 @@
 
 -11.
 
-Мальчишка уже хотел убежать, но неловко споткнулся об дверной порожек, из-за чего чуть ли не повис на своём рюкзаке, зацепившись об дверную ручку.
+Мальчишка уже хотел убежать, но неловко споткнулся об дверной порожек,
+из-за чего чуть ли не повис на своём рюкзаке, зацепившись об дверную ручку.
 
 =Фамилия… Имя… Поживее!
 
@@ -67,11 +70,16 @@
 
 =Ты уже всё равно опоздал на линейку. Они уже начали...
 
-В комнате ненадолго повисла тишина. Макс всё же встал на ноги, под ваш осуждающий взгляд.
+В комнате ненадолго повисла тишина.
+Макс всё же встал на ноги, под ваш осуждающий взгляд.
 
-=В честь первого учебного дня я могу тебя отмазать. Но взамен – расскажи мне немного о себе, о прошлой школьной жизни. Мне нужно понимать, какие ученики у меня под крылом. Да и отчётность...Ну, сам понимаешь.
+=В честь первого учебного дня я могу тебя отмазать.
+Но взамен – расскажи мне немного о себе, о прошлой школьной жизни.
+Мне нужно понимать, какие ученики у меня под крылом. Да и отчётность...
+Ну, сам понимаешь.
 
-Ученик немного опешил, узнав, что перед ним его классный руководитель. Но делать всё равно было нечего.
+Ученик немного опешил, узнав, что перед ним его классный руководитель.
+Но делать всё равно было нечего.
 
 -Ну…эм…
 
@@ -88,7 +96,7 @@
 
 -Рисую…
 
-=Чудесно! В качестве наказания к следующей неделе нарисуешь плакат ко дню рождения Лушта. Всё ясно?
+=Чудесно! В качестве наказания к следующей неделе нарисуешь плакат ко дню рождения Лушта.Всё ясно?
 
 -Вроде…
 
@@ -98,7 +106,8 @@
 
 -Так... я…
 
-В этот момент за дверью послышался громкий треск. Вы мигом ринулись открыть дверь и вашему удивлению не было предела.
+В этот момент за дверью послышался громкий треск.
+Вы мигом ринулись открыть дверь и вашему удивлению не было предела.
 
 =Какого...
 
