--- a/ind_0.html
+++ b/ind_0.html
@@ -25,9 +25,11 @@
                 <h5>Вводный Лист</h5>
                 <h6>Глава I</h6>
                 <textarea class='textarea'cols=87 disabled="on" readonly="on" autofocus rows="42" >
-                    Лёгкий осенний ветер освежал утреннюю зорьку. Тихий шелест листвы провожал вас своим унылым покачиванием.
+                    Лёгкий осенний ветер освежал утреннюю зорьку.
+                    Тихий шелест листвы провожал вас своим унылым покачиванием.
 
-#Новый день в школе...Надеюсь коллеги будут милашками# - подумали вы про себя и отворили калитку школы.
+#Новый день в школе...
+Надеюсь коллеги будут милашками# - подумали вы про себя и отворили калитку школы.
 
 #Вау...У них не выбиты стёкла. Что за роскошные условия!#
 
@@ -37,11 +39,13 @@
 
 -Пройдёмте, я покажу вам ваше логово.
 
-Идя по первому этажу, складывалось ощущение, будто в этой школе учат каких-то гениев. Всё выглядело до боли цивильно. Но стоило уйти за пределы главного холла...
+Идя по первому этажу, складывалось ощущение, будто в этой школе учат каких-то гениев.
+Всё выглядело до боли цивильно. Но стоило уйти за пределы главного холла...
 
 -Вот это ваш кабинет. Номер 104a! Располагайтесь, я пока вам бумаги из кабинета принесу.
 
-Пока директриса убежала, вы решаете осмотреть своё психологическое логово. Правда, кажется оно уже было занято...
+Пока директриса убежала, вы решаете осмотреть своё психологическое логово.
+Правда, кажется оно уже было занято...
 
 -Здрасте. - убежищно произнесла женщина, поедавшая хинкали.
 
@@ -51,11 +55,14 @@
 
 #Что за тварь...
 
-Дождавшись подмоги свыше, вы снова заходите в кабинет, после чего неизвестная захватчица территории мигом испаряется восвояси.
+Дождавшись подмоги свыше, вы снова заходите в кабинет,
+после чего неизвестная захватчица территории мигом испаряется восвояси.
 
--Заполните к вечеру. Заодно можете ознакомиться с учебной программой выпускников. Ну, сами разберётесь, если что зовите администратора.
+-Заполните к вечеру. Заодно можете ознакомиться с учебной программой выпускников.
+Ну, сами разберётесь, если что зовите администратора.
 
-На этом директриса и покончила. А вы остались одни в хламовнике с сумочкой, набитой различными бумагами....
+На этом директриса и покончила.
+А вы остались одни в хламовнике с сумочкой, набитой различными бумагами....
 
 #Пиздец...
                 </textarea>
