--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay-in-IT</title>
     <link rel="stylesheet" href="css/main3.css">
+    <style>
+    body { font-family: Arial, sans-serif}
+    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -15,7 +18,7 @@
                     <li><a href='index2.html'>Голосование</a></li>
                     <li><a href='index3.html'>Все Части</a></li>
                     <li><a href='index4.html'>Произошедшее</a></li>
-                    <li><a href='index5.html'>Прочее</a></li>
+                    <li><a href='index5.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
@@ -48,6 +51,14 @@
             <div class="Id_2">
                 <h5></h5>
                 <li><a href='ind_2.html'>Терпим-Пашем</a></li>
+                
+            </div>
+        </div>
+        <div class="hero4 container">
+            <img src="img/333.jpg" alt="">
+            <div class="Id_3">
+                <h5></h5>
+                <li><a href='ind_3.html'>Ночная Вылазка</a></li>
                 
             </div>
         </div>
