--- a/ind_0.html
+++ b/ind_0.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay-in-IT</title>
     <link rel="stylesheet" href="css/main.css">
+    <style>
+    body { font-family: Arial, sans-serif}
+    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -15,7 +18,7 @@
                     <li><a href='index2.html'>Голосование</a></li>
                     <li><a href='index3.html'>Все Части</a></li>
                     <li><a href='index4.html'>Произошедшее</a></li>
-                    <li><a href='index5.html'>Прочее</a></li>
+                    <li><a href='index5.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
