--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay-in-IT</title>
     <link rel="stylesheet" href="css/main.css">
+    <style>
+    body { font-family: Arial, sans-serif;}
+    </style>
 </head>
 
 <body>
@@ -17,7 +20,7 @@
                     <li><a href='index2.html'>Голосование</a></li>
                     <li><a href='index3.html'>Все Части</a></li>
                     <li><a href='index4.html'>Произошедшее</a></li>
-                    <li><a href='index5.html'>Прочее</a></li>
+                    <li><a href='index5.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,8 +33,8 @@
             </div>
             <h3></h3>
             <h4>Новые Части</h4>
-            <img src="img/222.jpg" alt="">
-            <li><a href='ind_2.html'>Перейти</a></li>
+            <img src="img/333.jpg" alt="">
+            <li><a href='ind_3.html'>Перейти</a></li>
 
         </div>
     </div>   
