--- a/index5.html
+++ b/index5.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay-in-IT</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main5.css">
+    <style>
+    body { font-family: Arial, sans-serif}
+    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -15,11 +18,12 @@
                     <li><a href='index2.html'>Голосование</a></li>
                     <li><a href='index3.html'>Все Части</a></li>
                     <li><a href='index4.html'>Произошедшее</a></li>
-                    <li><a href='index5.html'>Прочее</a></li>
+                    <li><a href='index5.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
         </div>
+        
     </div>  
 </body>
 </html>
