--- a/index5.html
+++ b/index5.html
@@ -22,6 +22,22 @@
                 </ul>
             </nav>
         </header>
+        <div class="hero00 container">
+            <div class="hero00--info">
+                <h2>Вы устраиваетесь работать учителем в обычную городскую школу.</h2>
+                <h2>Но, кроме ваших прямых обязанностей, вам впихивают классное руководство над выпускным классом.</h2>
+                <h2>Администрации требуется, чтобы вы каждую неделю выкладывали им</h2>
+                <h2>отчет о каждом ученике в целях их же безопасности.</h2></h2>
+                <h2>Вы будете вынуждены расспрашивать учеников об их личной жизни</h2>
+                <h2> и прочих проблемах, иначе рискуете подвергнуться репрессиям. Да здраствует Лушт!</h2>
+            </div>
+        </div>
+        <div class="hero1 container">
+            <div class="hero1--info">
+                <h2>В день вы будете успевать пообщаться с 3 учениками.</h2>
+                <h2> Их судьба может напрямую зависеть от вас, и от вашего подхода к образовательному процессу.</h2>
+                <li><a href='index2.html'>Проголосовать</a></li>
+            </div>
         </div>
         
     </div>  
