--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
                     <li><a href='index4.html'>Произошедшее</a></li>
                     <li><a href='index5.html'>О проекте</a></li>
                 </ul>
-    <h1>Решай быстрее.</h1>
+    <h1>Vote Now!</h1>
     <!-- Online Test Pad Survey Widget (#57825)-->
      <div id="otp_wgt_dalgqwec56kik"></div>
      <script type="text/javascript">
