--- a/ind_0.html
+++ b/ind_0.html
@@ -27,47 +27,51 @@
             <div class="Id_0">
                 <h5>Вводный Лист</h5>
                 <h6>Глава I</h6>
-                <textarea class='textarea'cols="100%" disabled="on" readonly="on" autofocus rows="42" >
+                <textarea class='textarea'cols="100%" disabled="on" readonly="on" autofocus rows="46" >
                     Лёгкий осенний ветер освежал утреннюю зорьку.
                     Тихий шелест листвы провожал вас своим унылым покачиванием.
 
-#Новый день в школе...
-Надеюсь коллеги будут милашками# - подумали вы про себя и отворили калитку школы.
+💭Новый день в школе... Надеюсь коллеги будут милашками - подумали вы про себя
+и отворили калитку школы.
 
-#Вау...У них не выбиты стёкла. Что за роскошные условия!#
+💭Вау...У них не выбиты стёкла. Что за роскошные условия!
 
 Зайдя внутрь через 30 тамбуров, вы наконец оказываетесь около стойки охранника.
 
--О, вы уже пришли! - сказала неизвестная женщина издалека. Это оказалась ваша новая директриса.
+(1)-О, вы уже пришли! - сказала неизвестная женщина издалека.
+ Это оказалась ваша новая директриса.
 
--Пройдёмте, я покажу вам ваше логово.
+(1)-Пройдёмте, я покажу вам ваше логово.
 
 Идя по первому этажу, складывалось ощущение, будто в этой школе учат каких-то гениев.
-Всё выглядело до боли цивильно. Но стоило уйти за пределы главного холла...
+Всё выглядело до боли цивильно.
+Но стоило уйти за пределы главного холла...
 
--Вот это ваш кабинет. Номер 104a! Располагайтесь, я пока вам бумаги из кабинета принесу.
+(1)-Вот это ваш кабинет. Номер 104a!
+Располагайтесь, я пока вам бумаги из кабинета принесу.
 
 Пока директриса убежала, вы решаете осмотреть своё психологическое логово.
 Правда, кажется оно уже было занято...
 
--Здрасте. - убежищно произнесла женщина, поедавшая хинкали.
+(2)-Здрасте. - убежищно произнесла женщина, поедавшая хинкали.
 
---Эм, здравствуйте. Мне сказали это мой кабинет.
+=Эм, здравствуйте. Мне сказали это мой кабинет.
 
--Ну приехали. Это моя кану.. это моя лабораторная! Покиньте помещение!
+(2)-Ну приехали. Это моя кану.. это моя лабораторная!
+Покиньте помещение!
 
-#Что за тварь...
+💭Что за тварь...
 
 Дождавшись подмоги свыше, вы снова заходите в кабинет,
 после чего неизвестная захватчица территории мигом испаряется восвояси.
 
--Заполните к вечеру. Заодно можете ознакомиться с учебной программой выпускников.
+(1)-Заполните к вечеру. Заодно можете ознакомиться с учебной программой выпускников.
 Ну, сами разберётесь, если что зовите администратора.
 
 На этом директриса и покончила.
 А вы остались одни в хламовнике с сумочкой, набитой различными бумагами....
 
-#Пиздец...
+💭Пиздец...
                 </textarea>
                 
             </div>
