--- a/ind_1.html
+++ b/ind_1.html
@@ -9,16 +9,35 @@
     body { font-family: Arial, sans-serif}
     </style>
 </head>
+
 <body>
     <div class="wrapper">
         <header class="container">
             <nav>
                 <ul> 
                     <li class="active"><a href='index.html'>Главная</a></li>
-                    <li><a href='index2.html'>Голосование</a></li>
-                    <li><a href='index3.html'>Все Части</a></li>
-                    <li><a href='index4.html'>Произошедшее</a></li>
+                    <h2>  </h2>
                     <li><a href='index5.html'>О проекте</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1></h1>
+        <header class="container">
+            <nav>
+                <ul> 
+                    <li class="active">
+                    <li><a href='index2.html'>Голосование</a></li>
+                    <h1>  </h1>
+                    <li><a href='index4.html'>Произошедшее</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1></h1>
+        <header class="container">
+            <nav>
+                <ul> 
+                    <li class="active">
+                    <li><a href='index3.html'>Все Части</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,13 +45,15 @@
          <div class="hero container">
             <div class="Id_0">
                 <h5>Первые Сюрпризы</h5>
-                <h6>Глава I</h6>
-                <textarea class='textarea'cols="100%" disabled="on" readonly="on" autofocus rows="97" >Утро первого сентября началось как обычно.
+                <h6>Глава 1</h6>
+                <textarea class='textarea' disabled="on" readonly="on" rows="107" >Утро первого сентября началось как обычно.
 Без всяких излишек вы напрямую идёте к себе в кабинет,
-по пути снова встречаясь с неизвестной захватчицей, идущей со стороны вашего кабинета.
+по пути снова встречаясь с неизвестной захватчицей,
+идущей со стороны вашего кабинета.
 
 
-Готовясь к предстоящим урокам, вам кажется, как небольшой холодок окутывает ваше тело.
+Готовясь к предстоящим урокам, вам кажется,
+как небольшой холодок окутывает ваше тело.
 Взглянув на дверь, вы замечаете причину.
 
 -Здравствуйте!
@@ -41,17 +62,20 @@
 
 ...
 
--Я просто не знаю где будет проходить линейка. Да и, как назло, никого в холле не было.
+-Я просто не знаю где будет проходить линейка.
+Да и, как назло, никого в холле не было.
 
 =И ты проследил за мной?
 
 -…
 
-=Я ничего не знаю! Я тут работаю меньше суток. Что вы от меня хотите.
+=Я ничего не знаю! Я тут работаю меньше суток.
+Что вы от меня хотите.
 
 -…
 
-=Там женщина прошла в другое крыло, думаю она тут явно знает больше.
+=Там женщина прошла в другое крыло,
+думаю она тут явно знает больше.
 
 -Ладно…Спасибо.
 
@@ -62,8 +86,10 @@
 
 -11.
 
-Мальчишка уже хотел убежать, но неловко споткнулся об дверной порожек,
-из-за чего чуть ли не повис на своём рюкзаке, зацепившись об дверную ручку.
+Мальчишка уже хотел убежать,
+но неловко споткнулся об дверной порожек,
+из-за чего чуть ли не повис на своём рюкзаке,
+зацепившись об дверную ручку.
 
 =Фамилия… Имя… Поживее!
 
@@ -77,16 +103,18 @@
 Макс всё же встал на ноги, под ваш осуждающий взгляд.
 
 =В честь первого учебного дня я могу тебя отмазать.
-Но взамен – расскажи мне немного о себе, о прошлой школьной жизни.
-Мне нужно понимать, какие ученики у меня под крылом. Да и отчётность...
-Ну, сам понимаешь.
+Но взамен – расскажи мне немного о себе,
+о прошлой школьной жизни.
+Мне нужно понимать, какие ученики у меня под крылом.
+Да и отчётность... Ну, сам понимаешь.
 
-Ученик немного опешил, узнав, что перед ним его классный руководитель.
+Ученик немного опешил, узнав,
+что перед ним его классный руководитель.
 Но делать всё равно было нечего.
 
 -Ну…эм…
 
-# Блять... он умеет рот по делу открывать? #
+💭Блять... он умеет рот по делу открывать?
 
 …
 
@@ -99,23 +127,24 @@
 
 -Рисую…
 
-=Чудесно! В качестве наказания к следующей неделе нарисуешь плакат ко дню рождения Лушта.
-Всё ясно?
+=Чудесно! В качестве наказания к следующей неделе
+нарисуешь плакат ко дню рождения Лушта. Всё ясно?
 
 -Вроде…
 
-#Аахх! Как заебал уже этот... #
+💭Аахх! Как заебал уже этот...
 
 =Хорошо, напоследок: почему ты опоздал в первый же день?
 
 -Так... я…
 
 В этот момент за дверью послышался громкий треск.
-Вы мигом ринулись открыть дверь и вашему удивлению не было предела.
+Вы мигом ринулись открыть дверь
+и вашему удивлению не было предела.
 
 =Какого...
 
-#Хуя!#
+💭Хуя!
 
 Перед вашим кабинетом столпилась огромная толпа ребят.
 
@@ -124,6 +153,9 @@
 Толпа подтвердила ваши опасения…
                 </textarea>
         </div>
-     </div>  
+        <div class="Id_1">
+                <h1> </h1>
+            </div>
+     </div>
 </body>
 </html>
