--- a/index5.html
+++ b/index5.html
@@ -7,39 +7,66 @@
     <link rel="stylesheet" href="css/main5.css">
     <style>
     body { font-family: Arial, sans-serif}
-    </style>
+   </style>
 </head>
+
 <body>
     <div class="wrapper">
         <header class="container">
             <nav>
                 <ul> 
                     <li class="active"><a href='index.html'>Главная</a></li>
-                    <li><a href='index2.html'>Голосование</a></li>
-                    <li><a href='index3.html'>Все Части</a></li>
-                    <li><a href='index4.html'>Произошедшее</a></li>
+                    <h2>  </h2>
                     <li><a href='index5.html'>О проекте</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1></h1>
+        <header class="container">
+            <nav>
+                <ul> 
+                    <li class="active">
+                    <li><a href='index2.html'>Голосование</a></li>
+                    <h1>  </h1>
+                    <li><a href='index4.html'>Произошедшее</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1></h1>
+        <header class="container">
+            <nav>
+                <ul> 
+                    <li class="active">
+                    <li><a href='index3.html'>Все Части</a></li>
                 </ul>
             </nav>
         </header>
         <div class="hero00 container">
             <div class="hero00--info">
-                <h2>Вы устраиваетесь работать учителем в обычную городскую школу.</h2>
-                <h2>Но, кроме ваших прямых обязанностей, вам впихивают классное руководство над выпускным классом.</h2>
-                <h2>Администрации требуется, чтобы вы каждую неделю выкладывали</h2>
-                <h2>отчет о каждом ученике в целях "сохранения качества народа".</h2></h2>
-                <h2>Вы будете вынуждены расспрашивать учеников об их личной жизни</h2>
-                <h2> и прочих проблемах, иначе рискуете подвергнуться репрессиям. Да здраствует Лушт!</h2>
+                <h2>Вы устраиваетесь работать учителем</h2>
+                <h2>в обычную городскую школу.</h2>
+                <h2>Но, кроме ваших прямых обязанностей,</h2>
+                <h2>вам впихивают классное руководство</h2>
+                <h2> над выпускным классом.</h2>
+                <h2>Администрации требуется, чтобы вы</h2>
+                <h2>каждую неделю выкладывали отчет</h2>
+                <h2>о каждом ученике в целях</h2>
+                <h2>"сохранения качества народа".</h2>
+                <h2>Вы будете вынуждены расспрашивать учеников</h2>
+                <h2>об их личной жизни и прочих проблемах,</h2>
+                <h2>иначе рискуете подвергнуться репрессиям.</h2>
+                <h2>Да здраствует Лушт! Да здраствует Лушт!</h2>
             </div>
         </div>
         <div class="hero1 container">
             <div class="hero1--info">
                 <h2>В день вы будете успевать пообщаться с 3 учениками.</h2>
-                <h2> Делайте выбор с умом. Далеко не всё пройдёт бесследно.</h2>
+                <h2>Делайте выбор с умом.</h2>
+                <h2>Далеко не всё пройдёт бесследно.</h2>
                 <li><a href='index2.html'>Проголосовать</a></li>
             </div>
+        <h3> </h3>
         </div>
-        
     </div>  
 </body>
 </html>
