--- a/ind_0.html
+++ b/ind_0.html
@@ -9,35 +9,16 @@
     body { font-family: Arial, sans-serif}
     </style>
 </head>
-
 <body>
     <div class="wrapper">
         <header class="container">
             <nav>
                 <ul> 
                     <li class="active"><a href='index.html'>Главная</a></li>
-                    <h2>  </h2>
-                    <li><a href='index5.html'>О проекте</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
                     <li><a href='index2.html'>Голосование</a></li>
-                    <h1>  </h1>
-                    <li><a href='index4.html'>Произошедшее</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
                     <li><a href='index3.html'>Все Части</a></li>
+                    <li><a href='index4.html'>Произошедшее</a></li>
+                    <li><a href='index5.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
@@ -45,41 +26,34 @@
          <div class="hero container">
             <div class="Id_0">
                 <h5>Вводный Лист</h5>
-                <h6>Глава 1</h6>
-                <textarea class='textarea'cols="100%" disabled="on" readonly="on" rows="56">
+                <h6>Глава I</h6>
+                <textarea class='textarea'cols="100%" disabled="on" readonly="on" autofocus rows="46" >
                     Лёгкий осенний ветер освежал утреннюю зорьку.
-                    Тихий шелест листвы провожал вас своим унылым
-                    покачиванием.
+                    Тихий шелест листвы провожал вас своим унылым покачиванием.
 
-💭Новый день в школе...
-Надеюсь коллеги будут милашками - подумали вы про себя
+💭Новый день в школе... Надеюсь коллеги будут милашками - подумали вы про себя
 и отворили калитку школы.
 
-💭Вау...У них не выбиты стёкла.
-Что за роскошные условия!
+💭Вау...У них не выбиты стёкла. Что за роскошные условия!
 
-Зайдя внутрь через 30 тамбуров,
-вы наконец оказываетесь около стойки охранника.
+Зайдя внутрь через 30 тамбуров, вы наконец оказываетесь около стойки охранника.
 
-(1)-О, вы уже пришли! - сказала неизвестная женщина
-издалека. Это оказалась ваша новая директриса.
+(1)-О, вы уже пришли! - сказала неизвестная женщина издалека.
+ Это оказалась ваша новая директриса.
 
 (1)-Пройдёмте, я покажу вам ваше логово.
 
-Идя по первому этажу, складывалось ощущение,
-будто в этой школе учат каких-то гениев.
+Идя по первому этажу, складывалось ощущение, будто в этой школе учат каких-то гениев.
 Всё выглядело до боли цивильно.
 Но стоило уйти за пределы главного холла...
 
 (1)-Вот это ваш кабинет. Номер 104a!
 Располагайтесь, я пока вам бумаги из кабинета принесу.
 
-Пока директриса убежала, вы решаете
-осмотреть своё психологическое логово.
+Пока директриса убежала, вы решаете осмотреть своё психологическое логово.
 Правда, кажется оно уже было занято...
 
-(2)-Здрасте. - убежищно произнесла женщина,
-поедавшая хинкали.
+(2)-Здрасте. - убежищно произнесла женщина, поедавшая хинкали.
 
 =Эм, здравствуйте. Мне сказали это мой кабинет.
 
@@ -89,19 +63,17 @@
 💭Что за тварь...
 
 Дождавшись подмоги свыше, вы снова заходите в кабинет,
-после чего неизвестная захватчица территории
-мигом испаряется восвояси.
+после чего неизвестная захватчица территории мигом испаряется восвояси.
 
-(1)-Заполните к вечеру. Заодно можете ознакомиться
-с учебной программой выпускников.
+(1)-Заполните к вечеру. Заодно можете ознакомиться с учебной программой выпускников.
 Ну, сами разберётесь, если что зовите администратора.
 
 На этом директриса и покончила.
-А вы остались одни в хламовнике с сумочкой,
-набитой различными бумагами....
+А вы остались одни в хламовнике с сумочкой, набитой различными бумагами....
 
 💭Пиздец...
                 </textarea>
+                
             </div>
         </div>
     </div>  
