--- a/index.html
+++ b/index.html
@@ -17,28 +17,10 @@
             <nav>
                 <ul> 
                     <li class="active"><a href='index.html'>Главная</a></li>
-                    <h2>  </h2>
-                    <li><a href='index5.html'>О проекте</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
                     <li><a href='index2.html'>Голосование</a></li>
-                    <h1>  </h1>
-                    <li><a href='index4.html'>Произошедшее</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
                     <li><a href='index3.html'>Все Части</a></li>
+                    <li><a href='index4.html'>Произошедшее</a></li>
+                    <li><a href='index5.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
@@ -46,13 +28,13 @@
         <div class="hero container">
             <div class="hero--info">
                 <h2>Stay in IT</h2>
-                <h1>Глава 1</h1>
-                <p>Неделя 1</p>
+                <h1>Глава I</h1>
+                <p>Неделя I</p>
             </div>
             <h3></h3>
             <h4>Новые Части</h4>
-            <img src="img/555.jpg" alt="">
-            <li><a href='ind_4.html'>Перейти</a></li>
+            <img src="img/444.jpg" alt="">
+            <li><a href='ind_4-1.html'>Перейти</a></li>
 
         </div>
     </div>   
