--- a/ind_2.html
+++ b/ind_2.html
@@ -7,37 +7,18 @@
     <link rel="stylesheet" href="css/main.css">
     <style>
     body { font-family: Arial, sans-serif}
-   </style>
+    </style>
 </head>
-
 <body>
     <div class="wrapper">
         <header class="container">
             <nav>
                 <ul> 
                     <li class="active"><a href='index.html'>Главная</a></li>
-                    <h2>  </h2>
-                    <li><a href='index5.html'>О проекте</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
                     <li><a href='index2.html'>Голосование</a></li>
-                    <h1>  </h1>
-                    <li><a href='index4.html'>Произошедшее</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
                     <li><a href='index3.html'>Все Части</a></li>
+                    <li><a href='index4.html'>Произошедшее</a></li>
+                    <li><a href='index5.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
@@ -45,60 +26,53 @@
          <div class="hero container">
             <div class="Id_0">
                 <h5>Терпим-Пашем</h5>
-                <h6>Глава 1</h6>
-                <textarea class='textarea'cols=100% disabled="on" readonly="on" autofocus rows="100" >Впустив делегацию детей в кабинет,
-                    вы молча сели за свой стол.
+                <h6>Глава I</h6>
+                <textarea class='textarea'cols=100% disabled="on" readonly="on" autofocus rows="90" >Впустив делегацию детей в кабинет, вы молча сели за свой стол.
                     Ученики переглядывались и ждали ваших дальнейших действий.
 
 =Я даже знать не хочу...Как вы...
 
-💭Блять!
+#Блять!#
 
-=Умудрились опоздать ВСЕМ классом.
-Вы знаете какие за это бывают наказания?!
-Дилетанты!
+=Умудрились опоздать ВСЕМ классом. Вы знаете какие за это бывают наказания?! Дилетанты!
 Будущее нашей планеты!
 
 ...
 
 В классе воцарилась глухая тишина.
-Вы молча уселись за свой стол
-и начали заполнять отчётность за первого ученика.
+Вы молча уселись за свой стол и начали заполнять свою отчётность за первого ученика.
 
-=Пока я заполняю важные бумаги,
-определите кто из вас будет старостой.
+=Пока я заполняю важные бумаги, определите кто из вас будет старостой.
 Только не устраиваете балаган!
 
 ...
 
-💭В первый раз мальчишку можно и простить...
-Поживём увидим...
-Надеюсь наше отсутствие на линейке никто не заметил.
+#В первый раз мальчишку можно и простить... Поживём увидим...
+Надеюсь наше отсутствие на линейке никто не заметил.#
 
-(1)-Я выдвигаю себя!
+-Я выдвигаю себя!
 
-(2)—Чего? Бесстыжая, куда лезешь?
+—Чего? Бесстыжая, куда лезешь?
 
-(1)-Это ты мне осломордая?
+-Это ты мне осломордая?
 
-(2)—А ты у нас по жеребцам скачешь?
+—А ты у нас по жеребцам скачешь?
 
-(1)-Ослина!
+-Ослина!
 
-(2)—Фуфайка зазнавшаяся! Я буду старостой!
+—Фуфайка зазнавшаяся! Я буду старостой!
 
-Заметив нарастающий конфликт вы, так уж и быть,
-решаете вмешаться.
+Заметив нарастающий конфликт вы, так уж и быть, решаете вмешаться.
 
 =Замолчали! Решаем всё дипломатией.
 
-💭Блять, какие же они дикари необразованные
+#Блять, какие же они дикари необразованные #
 
-(2)—Она слишком распутна для такой ответственной должности!
+—Она слишком распутна для такой ответственной должности!
 
-(1)-Эта хабалка немытая слишком много себе позволяет...
+-Эта хабалка немытая слишком много себе позволяет...
 
-💭Во выдают, эх..жаль нельзя разгонять это всё.
+#Во выдают, эх..жаль нельзя разгонять это всё.
 Думаю, в спарринге победит ослиха, распутная выглядит мягче.
 
 ...
@@ -108,45 +82,41 @@
 
 ...
 
-(2)—Буду ждать тебя за школой, нахалка...
+—Буду ждать тебя за школой, нахалка...
 
-(1)-Ракообразная...
+-Ракообразная...
 
 Под такие страсти прошёл аж целый урок...
 Дети мигом ринулись из кабинета с первыми нотами звонка.
 
-(2)—Держите листочки.
+—Держите листочки.
 
 =...?
 
 =Кто из вас Володькина Ника?
 
-(2)—Я...
+—Я...
 
 =Угу..
 
-=Назови членов своей семьи.
+=Назови членов семьи.
 
-(2)—Я, мама, отчим...
+—Я, мама, отчим...
 
-💭Ослом я так понимаю был отец.
+#Ослом я так понимаю был отец.#
 
 =Спасибо, можешь идти.
-Со следующей недели начнутся нормальные разговоры,
-а пока - гуляй.
+Со следующей недели начнутся нормальные разговоры, а пока - гуляй.
 
 Опустив взгляд вниз, вы продолжили заполнять кипу бумаг.
 Девочка уже направлялась к выходу, но...
 
-(2)—Не поможете сфотографироваться на пропуск?...
+—Не поможете сфотографироваться на пропуск?...
 
-💭ДА БляТь!
+#ДА БляТь!#
 
 =Да... конечно...
                 </textarea>
-            <div class="Id_1">
-                <h1> </h1>
-            </div>
          </div>
     </div>  
 </body>
