--- a/index2.html
+++ b/index2.html
@@ -6,46 +6,43 @@
     <title>Stay-in-IT</title>
     <link rel="stylesheet" href="css/main2.css">
      <style>
-        body { font-family: Arial, sans-serif;}
+        body { font-family: Arial, sans-serif}
+        form { max-width: 400px; margin: auto; }
+        label { display: block; margin: 10px 0; }
+        input[type="radio"] { margin-right: 10px; }
+        button { margin-top: 30px; background: #262232; color: white }
     </style>
 </head>
-
 <body>
     <div class="wrapper">
         <header class="container">
             <nav>
                 <ul> 
                     <li class="active"><a href='index.html'>Главная</a></li>
-                    <h2>  </h2>
+                    <li><a href='index2.html'>Голосование</a></li>
+                    <li><a href='index3.html'>Все Части</a></li>
+                    <li><a href='index4.html'>Произошедшее</a></li>
                     <li><a href='index5.html'>О проекте</a></li>
                 </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
-                    <li><a href='index2.html'>Голосование</a></li>
-                    <h1>  </h1>
-                    <li><a href='index4.html'>Произошедшее</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1></h1>
-        <header class="container">
-            <nav>
-                <ul> 
-                    <li class="active">
-                    <li><a href='index3.html'>Все Части</a></li>
-                </ul>
-            </nav>
-        </header>
-    <h4></h4>
-    <div class="hero container">
-        <h3>Голоса учтены!</h3>
-    </div>
-    
+    <h1>Vote Now!</h1>
+    <!-- Online Test Pad Survey Widget (#57825)-->
+     <div id="otp_wgt_dalgqwec56kik"></div>
+     <script type="text/javascript">
+     var otp_wjs_dt = (new Date).getTime();
+    (function (w, d, n, s, rp) {
+        w[n] = w[n] || [];
+        rp = {};
+        w[n].push(function () {
+            otp_render_widget(d.getElementById("otp_wgt_dalgqwec56kik"), 'onlinetestpad.com', 'dalgqwec56kik', rp);
+        }); 
+        s = d.createElement("script");
+        s.type = "text/javascript";
+        s.src = "//onlinetestpad.com/js/widget.js?" + otp_wjs_dt;
+        s.async = true;
+        d.getElementsByTagName("head")[0].appendChild(s);
+    })(this, this.document, "otp_widget_callbacks");
+    </script>
+    <h2> </h2>
 
 </body>
 </html>
