--- a/index4.html
+++ b/index4.html
@@ -32,13 +32,22 @@
             <div class="hero1--info">
                 <h2>Выбор ПН - 1</h2>
                 <h1>"Ваш первый день! Каким учителем преподнесёте себя?" </h1>
-                <h3>Строгим</h3>
+                <h3>Строгим (75%)</h3>
                 <h4>Легкомысленным</h4>
                 <h5>Распущенным</h5>
             </div>
 
         </div>
-    
+        <div class="hero2 container">
+            <div class="hero1--info">
+                <h2>Выбор ВТ - 1</h2>
+                <h1>"Что же вы сделаете с находкой?" </h1>
+                <h3>Присвою себе        (50%)</h3>
+                <h4>Припрячу</h4>
+                <h5>Использую</h5>
+            </div>
+
+        </div>
     </div>  
 </body>
 </html>
