--- a/index2.html
+++ b/index2.html
@@ -24,25 +24,7 @@
                     <li><a href='index4.html'>Произошедшее</a></li>
                     <li><a href='index5.html'>О проекте</a></li>
                 </ul>
-    <h1>Vote Now!</h1>
-    <!-- Online Test Pad Survey Widget (#57825)-->
-     <div id="otp_wgt_dalgqwec56kik"></div>
-     <script type="text/javascript">
-     var otp_wjs_dt = (new Date).getTime();
-    (function (w, d, n, s, rp) {
-        w[n] = w[n] || [];
-        rp = {};
-        w[n].push(function () {
-            otp_render_widget(d.getElementById("otp_wgt_dalgqwec56kik"), 'onlinetestpad.com', 'dalgqwec56kik', rp);
-        }); 
-        s = d.createElement("script");
-        s.type = "text/javascript";
-        s.src = "//onlinetestpad.com/js/widget.js?" + otp_wjs_dt;
-        s.async = true;
-        d.getElementsByTagName("head")[0].appendChild(s);
-    })(this, this.document, "otp_widget_callbacks");
-    </script>
-    <h2> </h2>
+    <h1>Голоса учтены!</h1>
 
 </body>
 </html>
