--- a/ind_4-1.html
+++ b/ind_4-1.html
@@ -14,11 +14,11 @@
         <header class="container">
             <nav>
                 <ul> 
-                    <li class="active"><a href='index.html'>Главная</a></li>
-                    <li><a href='index2.html'>Голосование</a></li>
-                    <li><a href='index3.html'>Все Части</a></li>
-                    <li><a href='index4.html'>Произошедшее</a></li>
-                    <li><a href='index5.html'>О проекте</a></li>
+                    <li class="active"><a href='MainMenu.html'>Главная</a></li>
+                    <li><a href='VoteMenu.html'>Голосование</a></li>
+                    <li><a href='ReadMenu.html'>Все Части</a></li>
+                    <li><a href='HistoryMenu.html'>Произошедшее</a></li>
+                    <li><a href='AboutMenu.html'>О проекте</a></li>
                 </ul>
             </nav>
         </header>
