--- a/Doc1.html
+++ b/Doc1.html
@@ -16,7 +16,7 @@
         <header class="container">
             <nav>
                 <ul> 
-                    <li class="active"><a href='MainMenu.html'>Главная</a></li>
+                    <li class="active"><a href='index.html'>Главная</a></li>
                     <li><a href='VoteMenu.html'>Голосование</a></li>
                     <li><a href='ReadMenu.html'>Все Части</a></li>
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
