--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay-in-IT</title>
-    <link rel="stylesheet" href="css/main2.css">
-     <style>
-        body { font-family: Arial, sans-serif}
-        form { max-width: 400px; margin: auto; }
-        label { display: block; margin: 10px 0; }
-        input[type="radio"] { margin-right: 10px; }
-        button { margin-top: 30px; background: #262232; color: white }
+    <link rel="stylesheet" href="css/main.css">
+    <style>
+    body { font-family: Arial, sans-serif;}
     </style>
 </head>
+
 <body>
     <div class="wrapper">
         <header class="container">
@@ -24,7 +22,22 @@
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
                     <li><a href='AboutMenu.html'>О проекте</a></li>
                 </ul>
-    <h1>Голоса учтены!</h1>
+            </nav>
+        </header>
 
+        <div class="hero container">
+            <div class="hero--info">
+                <h2>Stay in IT</h2>
+                <h1>Глава I</h1>
+                <p>Неделя I</p>
+            </div>
+            <h3></h3>
+            <h4>Новые Части</h4>
+            <img src="img/666н.jpg" alt="">
+            <li><a href='ind_5.html'>Перейти</a></li>
+
+        </div>
+    </div>   
 </body>
+
 </html>
