--- a/ReadMenu.html
+++ b/ReadMenu.html
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="hero8 container">
-            <img src="img/777н.jpg" alt="">
+            <img src="img/777.jpg" alt="">
             <div class="Id_7">
                 <h5></h5>
                 <li><a href='ind_6.html'>Налог на Уверенность</a></li>
