--- a/ReadMenu.html
+++ b/ReadMenu.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="hero5 container">
-            <img src="img/444.jpg" alt="">
+            <img src="img/Raccon.jpg" alt="">
             <div class="Id_4">
                 <h5></h5>
                 <li><a href='ind_4-1.html'>Утречко</a></li>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="hero6 container">
-            <img src="img/555.jpg" alt="">
+            <img src="img/444.jpg" alt="">
             <div class="Id_5">
                 <h5></h5>
                 <li><a href='ind_4.html'>Первая Кампания</a></li>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="hero7 container">
-            <img src="img/666н.jpg" alt="">
+            <img src="img/555.jpg" alt="">
             <div class="Id_6">
                 <h5></h5>
                 <li><a href='ind_5.html'>Папенькина Дочка</a></li>
@@ -87,10 +87,18 @@
             </div>
         </div>
         <div class="hero8 container">
-            <img src="img/777.jpg" alt="">
+            <img src="img/666.jpg" alt="">
             <div class="Id_7">
                 <h5></h5>
                 <li><a href='ind_6.html'>Налог на Уверенность</a></li>
+                
+            </div>
+        </div>
+        <div class="hero9 container">
+            <img src="img/Fox.jpg" alt="">
+            <div class="Id_8">
+                <h5></h5>
+                <li><a href='ind_7.html'>Суровость бытия</a></li>
                 
             </div>
         </div>
