--- a/VoteMenu2.html
+++ b/VoteMenu2.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay-in-IT</title>
-    <link rel="stylesheet" href="css/main.css">
-    <style>
-    body { font-family: Arial, sans-serif;}
+    <link rel="stylesheet" href="css/main2.css">
+     <style>
+        body { font-family: Arial, sans-serif}
+        form { max-width: 400px; margin: auto; }
+        label { display: block; margin: 10px 0; }
+        input[type="radio"] { margin-right: 10px; }
+        button { margin-top: 30px; background: #262232; color: white }
     </style>
 </head>
-
 <body>
     <div class="wrapper">
         <header class="container">
@@ -22,22 +24,12 @@
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
                     <li><a href='AboutMenu.html'>О проекте</a></li>
                 </ul>
-            </nav>
-        </header>
+                <div class="hero container">
+        <h1>Голос Учтён.</h1>
+    </div>
+            <h4></h4>
+    <h2> </h2>
+    <h4></h4>            
 
-        <div class="hero container">
-            <div class="hero--info">
-                <h2>Stay in IT</h2>
-                <h1>Глава I</h1>
-                <p>Неделя I</p>
-            </div>
-            <h3></h3>
-            <h4>Новые Части</h4>
-            <img src="img/Fox.jpg" alt="">
-            <li><a href='ind_7.html'>Перейти</a></li>
-
-        </div>
-    </div>   
 </body>
-
 </html>
