--- a/Doc1.html
+++ b/Doc1.html
@@ -28,7 +28,12 @@
          <div class="hero00 container">
             <div class="Id_0">
                 <h5>Архив</h5>
+                <h5></h5>
                 <img src="img/Ot1.jpg" alt="">
+            <div class="Id_1">
+                <img src="img/Ot2.jpg" alt="">
+
+            </div>
         </div>
      </div>  
 </body>
