--- a/ind_4-1.html
+++ b/ind_4-1.html
@@ -30,9 +30,9 @@
                      Постель казалось настолько мягкой, нежной и воздушной
                      что вы жадно тонули в пучинах кайфа.
 Пробудившись, вы сразу же отправились на утреннюю пробежку.
-Выйдя из дома, вас уже поджидал друг.
+Выйдя из дома, вас уже поджидал старый знакомый.
 
--Готовность?
+(р5)-Готовность?
 
 =На полную!
 
@@ -46,7 +46,7 @@
 
 =Не отставай!
 
--И не собираюсь! Буду ещё "Я!" проигрывать в темпе у училовы!
+(р5)-И не собираюсь! Буду ещё "Я!" проигрывать в темпе у училовы!
 Адаптируюсь!
 
 Присев на диван,
