--- a/ind_4.html
+++ b/ind_4.html
@@ -36,7 +36,7 @@
 Но хорошее настроение сопровождало вас
 ровно до момента входа в кабинет.
 
-(1)-Опять ты.
+(т1)-Опять ты.
 Тебе этот кабинет на постоянку дали что-ли? - сворганила
 из своих уст, попивающая чай, захватчица.
 
@@ -44,50 +44,58 @@
 
 =Да.
 
-(1)-Пизда.
+(т1)-Пизда.
 
 💭Болит?...Сука...
 
-(1)-Крошка, ты стучись хотя бы.
+(т1)-Крошка, ты стучись хотя бы.
 Заходить без предупреждения не прилично!
+
 Женщина встала,
 взяла свою кружку и встала аккурат перед вами,
 протянув свою когтистую лапу
-(1)-Григория Екатериновна. Можно просто - Гризли.
+
+(т1)-Григория Екатериновна. Можно просто - Гризли.
 Заслуженная учительница физики и лауреат...а впрочем...
+
 Аккуратно поставив кружку на парту,
 учительница ехидно посмотрела на вас.
-(1)-Я обитаю в конце коридора. Ещё увидимся.
+
+(т1)-Я обитаю в конце коридора. Ещё увидимся.
+
 Гризли элегантно надела чёрную байкерскую куртку и
 направилась к себе в кабинет.
+
 Немного придя в себя после вчерашнего сна и утренней встречи,
 вы без всяких проблем проводите 4 урока.
 Ученики чаще всего были молчаливы и спокойны,
 что упрощало вам работу.
+
 И вот, проскакав у доски до обеда,
 вы заслуженно отправляетесь вкушать плоды трудов сельчан.
+
 Зайдя в учительскую,
 за небольшим круглым столом уже располагались
 представители "самых молодых и компетентных" учителей школы.
 
-(1)- О, это ты? Ну давай, давай, присаживайся.
+(т1)- О, это ты? Ну давай, давай, присаживайся.
 
 Поддавшись на бесплатный обед,
 вы решили присоединиться к трапезе.
 
-(2)-Как звать? Что ведёшь?(ОБЖ)
+(т2)-Как звать? Что ведёшь?
 
 =Я... - вас перебили.
 
-(3)-Тебе, слышал, дали руководство над 11-тт?
+(т3)-Тебе, слышал, дали руководство над 11-тт?
 
-(1)-Да, над ними! Тт кста не означает - тупее тупых?
+(т1)-Да, над ними! Тт кста не означает - тупее тупых?
 
-(3)-Оооо! А где вы были вчера на линейке? Я вас не приметил.
+(т3)-Оооо! А где вы были вчера на линейке? Я вас не приметил.
 
-(2)-У вас кстати очень красивая причёска. У кого стрижётесь?
+(т2)-У вас кстати очень красивая причёска. У кого стрижётесь?
 
-(1)-Оооо! А вы слышали что Ильинка налысо подстриглась?
+(т1)-Оооо! А вы слышали что Ильинка налысо подстриглась?
 
 =Мне..надо в отлучиться...я мигом!
 
@@ -95,18 +103,18 @@
 вы решаете немного перекентоваться там,
 где обычно никого не бывает.
 
-(4)-БЛЯТЬ! - это было первое, что вы услышали,
+(у4)-БЛЯТЬ! - это было первое, что вы услышали,
 зайдя в учительский туалет.
 
 В нём сидел до боли знакомый вам мальчуган.
 
 =Класс?
 
-(4)-10
+(у4)-10
 
 =А если честно?
 
-(4)-Ладно, ладно. 11.
+(у4)-Ладно, ладно. 11.
 
 Ученик пытался аккуратно потушить сигарету об ободок унитаза,
 но случайно скинул бычок в смыв.
@@ -114,7 +122,7 @@
 =Я так понимаю ты тут уже не в первый раз.
 А кто тебе ключики дал?
 
-(4)...Да как-то так получилось...
+(у4)...Да как-то так получилось...
 
 =Имя!
 
