--- a/ind_1.html
+++ b/ind_1.html
@@ -35,39 +35,39 @@
 Готовясь к предстоящим урокам, вам кажется, как небольшой холодок окутывает ваше тело.
 Взглянув на дверь, вы замечаете причину.
 
--Здравствуйте!
+(у1)-Здравствуйте!
 
 =Здравствуй мальчик. Ты потерялся?
 
 ...
 
--Я просто не знаю где будет проходить линейка. Да и, как назло, никого в холле не было.
+(у1)-Я просто не знаю где будет проходить линейка. Да и, как назло, никого в холле не было.
 
 =И ты проследил за мной?
 
--…
+(у1)-…
 
 =Я ничего не знаю! Я тут работаю меньше суток. Что вы от меня хотите.
 
--…
+(у1)-…
 
 =Там женщина прошла в другое крыло, думаю она тут явно знает больше.
 
--Ладно…Спасибо.
+(у1)-Ладно…Спасибо.
 
 …
 
 ...
 =Стоять! Ты из какого класса.
 
--11.
+(у1)-11.
 
 Мальчишка уже хотел убежать, но неловко споткнулся об дверной порожек,
 из-за чего чуть ли не повис на своём рюкзаке, зацепившись об дверную ручку.
 
 =Фамилия… Имя… Поживее!
 
--Братскин Макс...
+(у1)-Братскин Макс...
 
 Вы встали из-за стола и элегантно подошли к ребёнку.
 
@@ -84,38 +84,38 @@
 Ученик немного опешил, узнав, что перед ним его классный руководитель.
 Но делать всё равно было нечего.
 
--Ну…эм…
+(у1)-Ну…эм…
 
-# Блять... он умеет рот по делу открывать? #
+💭Блять... он умеет рот по делу открывать?
 
 …
 
 
 =По активнее давай. Активнее! Сколько тебе лет?
 
--16.
+(у1)-16.
 
 =Увлечения?
 
--Рисую…
+(у1)-Рисую…
 
 =Чудесно! В качестве наказания к следующей неделе нарисуешь плакат ко дню рождения Лушта.
 Всё ясно?
 
--Вроде…
+(у1)-Вроде…
 
-#Аахх! Как заебал уже этот... #
+💭Аахх! Как заебал...
 
 =Хорошо, напоследок: почему ты опоздал в первый же день?
 
--Так... я…
+(у1)-Так... я…
 
 В этот момент за дверью послышался громкий треск.
 Вы мигом ринулись открыть дверь и вашему удивлению не было предела.
 
 =Какого...
 
-#Хуя!#
+💭Хуя!
 
 Перед вашим кабинетом столпилась огромная толпа ребят.
 
