--- a/ind_2.html
+++ b/ind_2.html
@@ -32,7 +32,7 @@
 
 =Я даже знать не хочу...Как вы...
 
-#Блять!#
+💭Блять!
 
 =Умудрились опоздать ВСЕМ классом. Вы знаете какие за это бывают наказания?! Дилетанты!
 Будущее нашей планеты!
@@ -47,32 +47,32 @@
 
 ...
 
-#В первый раз мальчишку можно и простить... Поживём увидим...
-Надеюсь наше отсутствие на линейке никто не заметил.#
+💭В первый раз мальчишку можно и простить... Поживём увидим...
+Надеюсь наше отсутствие на линейке никто не заметил.
 
--Я выдвигаю себя!
+(у9)-Я выдвигаю себя!
 
-—Чего? Бесстыжая, куда лезешь?
+(у2)—Чего? Бесстыжая, куда лезешь?
 
--Это ты мне осломордая?
+(у9)-Это ты мне осломордая?
 
-—А ты у нас по жеребцам скачешь?
+(у2)—А ты у нас по жеребцам скачешь?
 
--Ослина!
+(у9)-Ослина!
 
-—Фуфайка зазнавшаяся! Я буду старостой!
+(у2)—Фуфайка зазнавшаяся! Я буду старостой!
 
 Заметив нарастающий конфликт вы, так уж и быть, решаете вмешаться.
 
 =Замолчали! Решаем всё дипломатией.
 
-#Блять, какие же они дикари необразованные #
+💭Блять, какие же они дикари необразованные
 
-—Она слишком распутна для такой ответственной должности!
+(у2)—Она слишком распутна для такой ответственной должности!
 
--Эта хабалка немытая слишком много себе позволяет...
+(у9)-Эта хабалка немытая слишком много себе позволяет...
 
-#Во выдают, эх..жаль нельзя разгонять это всё.
+💭Во выдают, эх..жаль нельзя разгонять это всё.
 Думаю, в спарринге победит ослиха, распутная выглядит мягче.
 
 ...
@@ -82,28 +82,28 @@
 
 ...
 
-—Буду ждать тебя за школой, нахалка...
+(у2)—Буду ждать тебя за школой, ракообразная...
 
--Ракообразная...
+(у9)-Нахалка...
 
 Под такие страсти прошёл аж целый урок...
 Дети мигом ринулись из кабинета с первыми нотами звонка.
 
-—Держите листочки.
+(у2)—Держите листочки.
 
 =...?
 
-=Кто из вас Володькина Ника?
+=Кто из вас Водоль Ника?
 
-—Я...
+(у2)—Я...
 
 =Угу..
 
 =Назови членов семьи.
 
-—Я, мама, отчим...
+(у2)—Я, мама, отчим...
 
-#Ослом я так понимаю был отец.#
+💭Ослом я так понимаю был отец.
 
 =Спасибо, можешь идти.
 Со следующей недели начнутся нормальные разговоры, а пока - гуляй.
@@ -111,9 +111,9 @@
 Опустив взгляд вниз, вы продолжили заполнять кипу бумаг.
 Девочка уже направлялась к выходу, но...
 
-—Не поможете сфотографироваться на пропуск?...
+(у2)—Не поможете сфотографироваться на пропуск?...
 
-#ДА БляТь!#
+💭ДА БляТь!
 
 =Да... конечно...
                 </textarea>
