--- a/ind_3.html
+++ b/ind_3.html
@@ -33,7 +33,7 @@
  вы узнали только покинув учебное заведение.
 Но...
 
-#Максуд...
+💭Майк...
 
 Вспомнив, что вам так и не удалось опросить мальчугана,
 вы решаете вернуться и заполнить документ самостоятельно.
@@ -55,40 +55,41 @@
 Постучав в дверь с той мягкостью, с какой вы могли себе позволить в вашем состоянии,
 дверь открывает...он.
 
-=Ну здравствуй. Ты Максуд? - сказали вы с такой мягкой дерзостью,
+=Ну здравствуй. Ты Майк? - сказали вы с такой мягкой дерзостью,
 что глаза бедного ученика уже почти выпали из орбит.
 
 =Мне нужно поболтать с тобой. Это не займёт много времени. Только, можно зайти внутрь?...
+
 Нехотя ученик впустил вас внутрь, параллельно доставая что-то острое из кармана.
 
 =Давай так - я задаю вопрос, ты - простой ответ.
-По хорошему, я должна была пригласить тебя в конце дня, но...
+По хорошему, это всё должно было быть в школе, но...
 
-Максуд солча покачал головой. Удобно усевшись в прихожей, вы начали свой брейн-шторм:
+Майк солча покачал головой. Удобно усевшись в прихожей, вы начали свой брейн-шторм:
 
 =Имя?
 
--Максуд
+(у3)-Майк
 
 =С фамилией!
 
--Громов
+(у3)-Грин
 
 =Возраст
 
--Как у всех.
+(у3)-Как у всех.
 
-#сука...
+💭сука...
 
 =Родители? И кстати, они дома?
 
--Мама ушла на работу. А отец на миссии!
+(у3)-Мама ушла на работу. А отец на миссии!
 
-#Чё бля
+💭Чё бля
 
 =Какой миссии?
 
--Хз, мать так не уточняет. Но он настоящий герой!
+(у3)-Хз, мать так не уточняет. Но он настоящий герой!
 
 Повисло неловкое молчание...
 
@@ -96,7 +97,7 @@
 
 Поблагодарив мальчугана, вы выбегаете из богом забытой квартиры.
 
-#Герой?...Ха!......он безнадёжен...
+💭Герой?...Ха!......он безнадёжен...
                 </textarea>
          </div>
     </div>  
