--- a/ind_5.html
+++ b/ind_5.html
@@ -26,7 +26,7 @@
             <div class="Id_0">
                 <h5>Папенькина Дочка</h5>
                 <h6>Глава 1</h6>
-                <textarea class='textarea'cols=87 disabled="on" readonly="on" autofocus rows="87" >Вернувшись в уже родной закрысник,
+                <textarea class='textarea'cols=87 disabled="on" readonly="on" autofocus rows="77" >Вернувшись в уже родной закрысник,
                      вы уже готовились отвечать на все самые тупые вопросы коллег.
                       Но к удивлению, они молча сидели и никак вас не трогали.
                        Казалось,что за время отсутствия явно что-то произошло.
@@ -100,13 +100,7 @@
 
 ....
 
-(у1) - и что тут у вас за лужа... под верю?...
-
-=Чего..?
-
-...
-
-💭блять...протекла...
+=Ладно.
                 </textarea>
          </div>
     </div>  
