--- a/ind_7.html
+++ b/ind_7.html
@@ -45,7 +45,7 @@
 
 ...
 
-#Что это было..
+💭Что это было..
 
 Для принятия реальности понадобилось немного-немало времени.
  Вы уже хотели звонить своим родственникам, как вас снова постигла реальность.
@@ -73,7 +73,7 @@
 (р3) - Завтра будешь так же сосать пальчик?
 
 Последний вопрос от Неё застрял в вашей голове и вы невольно задумались...
-Действительно, а как вам быть завтра?...
+...Действительно, а как вам быть завтра?...
                 </textarea>
          </div>
     </div>  
