--- a/HistoryMenu.html
+++ b/HistoryMenu.html
@@ -49,6 +49,16 @@
             </div>
 
         </div>
+        <div class="hero3 container">
+            <div class="hero1--info">
+                <h2>Выбор СР - 1</h2>
+                <h1>"А как вам быть завтра?..." </h1>
+                <h3>Это всё был сон себе</h3>
+                <h4>Я сейчас заплачу</h4>
+                <h5>Детям тяжелее (78%)</h5>
+            </div>
+
+        </div>
     </div>  
 </body>
 </html>
