--- a/ind_0.html
+++ b/ind_0.html
@@ -38,16 +38,16 @@
 
 Зайдя внутрь через 30 тамбуров, вы наконец оказываетесь около стойки охранника.
 
-(1)-О, вы уже пришли! - сказала неизвестная женщина издалека.
+(д)-О, вы уже пришли! - сказала неизвестная женщина издалека.
  Это оказалась ваша новая директриса.
 
-(1)-Пройдёмте, я покажу вам ваше логово.
+(д)-Пройдёмте, я покажу вам ваше логово.
 
 Идя по первому этажу, складывалось ощущение, будто в этой школе учат каких-то гениев.
 Всё выглядело до боли цивильно.
 Но стоило уйти за пределы главного холла...
 
-(1)-Вот это ваш кабинет. Номер 104a!
+(д)-Вот это ваш кабинет. Номер 104a!
 Располагайтесь, я пока вам бумаги из кабинета принесу.
 
 Пока директриса убежала, вы решаете осмотреть своё психологическое логово.
@@ -57,7 +57,7 @@
 
 =Эм, здравствуйте. Мне сказали это мой кабинет.
 
-(2)-Ну приехали. Это моя кану.. это моя лабораторная!
+(?)-Ну приехали. Это моя кану.. это моя лабораторная!
 Покиньте помещение!
 
 💭Что за тварь...
@@ -65,7 +65,7 @@
 Дождавшись подмоги свыше, вы снова заходите в кабинет,
 после чего неизвестная захватчица территории мигом испаряется восвояси.
 
-(1)-Заполните к вечеру. Заодно можете ознакомиться с учебной программой выпускников.
+(д)-Заполните к вечеру. Заодно можете ознакомиться с учебной программой выпускников.
 Ну, сами разберётесь, если что зовите администратора.
 
 На этом директриса и покончила.
