--- a/Doc1.html
+++ b/Doc1.html
@@ -20,7 +20,7 @@
                     <li><a href='VoteMenu.html'>Голосование</a></li>
                     <li><a href='ReadMenu.html'>Все Части</a></li>
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
-                    <li><a href='AboutMenu.html'>О проекте</a></li>
+                    <li><a href='AboutMenu.html'>Персонажи</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,6 +32,8 @@
                 <img src="img/Ot1.jpg" alt="">
             <div class="Id_1">
                 <img src="img/Ot2.jpg" alt="">
+            <div class="Id_2">
+                <img src="img/Ot3.jpg" alt="">
 
             </div>
         </div>
