--- a/VoteMenu2.html
+++ b/VoteMenu2.html
@@ -22,10 +22,10 @@
                     <li><a href='VoteMenu.html'>Голосование</a></li>
                     <li><a href='ReadMenu.html'>Все Части</a></li>
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
-                    <li><a href='AboutMenu.html'>О проекте</a></li>
+                    <li><a href='AboutMenu.html'>Персонажи</a></li>
                 </ul>
                 <div class="hero container">
-        <h1>Голоса Учтёны.</h1>
+        <h1>Голос Учтён.</h1>
     </div>
             <h4></h4>
     <h2> </h2>
