--- a/AboutMenu.html
+++ b/AboutMenu.html
@@ -18,27 +18,89 @@
                     <li><a href='VoteMenu.html'>Голосование</a></li>
                     <li><a href='ReadMenu.html'>Все Части</a></li>
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
-                    <li><a href='AboutMenu.html'>О проекте</a></li>
+                    <li><a href='AboutMenu.html'>Персонажи</a></li>
                 </ul>
             </nav>
         </header>
-        <div class="hero00 container">
-            <div class="hero00--info">
-                <h2>Вы устраиваетесь работать учителем в обычную городскую школу.</h2>
-                <h2>Но, кроме ваших прямых обязанностей, вам впихивают классное руководство над выпускным классом.</h2>
-                <h2>Администрации требуется, чтобы вы каждую неделю выкладывали</h2>
-                <h2>отчет о каждом ученике в целях "сохранения качества народа".</h2></h2>
-                <h2>Вы будете вынуждены расспрашивать учеников об их личной жизни</h2>
-                <h2> и прочих проблемах, иначе рискуете подвергнуться репрессиям. Да здраствует Лушт!</h2>
-            </div>
-        </div>
-        <div class="hero1 container">
-            <div class="hero1--info">
-                <h2>В день вы будете успевать пообщаться с 3 учениками.</h2>
-                <h2> Делайте выбор с умом. Далеко не всё пройдёт бесследно.</h2>
-                <li><a href='VoteMenu.html'>Проголосовать</a></li>
-            </div>
-        </div>
+         <div class="hero container">
+            <h10>Ученики 11-Тт</h10>
+             <div class="Id_0">
+                <h1></h1>
+                <img src="img/0001.jpg" alt="">
+                <h2>Макс Братскин</h2>
+                <h3></h3>
+            <div class="Id_1">
+                <h1></h1>
+                <img src="img/0002.jpg" alt="">
+                <h2>Ника Водоль</h2>
+                <h3></h3>
+            <div class="Id_2">
+                <h1></h1>
+                <img src="img/0003.jpg" alt="">
+                <h2>Майкл Грин</h2>
+                <h3></h3>
+            <div class="Id_3">
+                <h1></h1>
+                <img src="img/0004.jpg" alt="">
+                <h2>Николя Квасов</h2>
+                <h3></h3>
+            <div class="Id_4">
+                <h1></h1>
+                <img src="img/0005.jpg" alt="">
+                <h2>Нюра Кравчук</h2>
+                <h3></h3>
+            <div class="Id_5">
+                <h1></h1>
+                <img src="img/0006.jpg" alt="">
+                <h2>Барсик Лесайл</h2>
+                <h3></h3>
+            <div class="Id_6">
+                <h1></h1>
+                <img src="img/0007.jpg" alt="">
+                <h2>Ева Мясова</h2>
+                <h3></h3>
+            <div class="Id_7">
+                <h1></h1>
+                <img src="img/0008.jpg" alt="">
+                <h2>Дора Набабки</h2>
+                <h3></h3>
+            <div class="Id_8">
+                <h1></h1>
+                <img src="img/0009.jpg" alt="">
+                <h2>Вера Рудкова</h2>
+                <h3></h3>
+            <div class="Id_9">
+                <h1></h1>
+                <img src="img/0010.jpg" alt="">
+                <h2>???</h2>
+                <h3></h3>
+            <div class="Id_10">
+                <h1></h1>
+                <img src="img/0011.jpg" alt="">
+                <h2>???</h2>
+                <h3></h3>
+            <div class="Id_11">
+                <h1></h1>
+                <img src="img/0012.jpg" alt="">
+                <h2>???</h2>
+                <h3></h3>
+            <div class="Id_12">
+                <h1></h1>
+                <img src="img/0013.jpg" alt="">
+                <h2>???</h2>
+                <h3></h3>
+            <div class="Id_13">
+                <h1></h1>
+                <img src="img/0014.jpg" alt="">
+                <h2>???</h2>
+                <h3></h3>
+            <div class="Id_14">
+                <h1></h1>
+                <img src="img/0015.jpg" alt="">
+                <h2>???</h2>
+                <h3></h3>
+         </div>
+       
         
     </div>  
 </body>
