--- a/HistoryMenu.html
+++ b/HistoryMenu.html
@@ -18,7 +18,7 @@
                     <li><a href='VoteMenu.html'>Голосование</a></li>
                     <li><a href='ReadMenu.html'>Все Части</a></li>
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
-                    <li><a href='AboutMenu.html'>О проекте</a></li>
+                    <li><a href='AboutMenu.html'>Персонажи</a></li>
                 </ul>
             </nav>
         </header>
@@ -31,7 +31,7 @@
         </div>
         <div class="hero1 container">
             <div class="hero1--info">
-                <h2>Выбор ПН - 1</h2>
+                <h2>ПН - 1</h2>
                 <h1>"Ваш первый день! Каким учителем преподнесёте себя?" </h1>
                 <h3>Строгим (75%)</h3>
                 <h4>Легкомысленным</h4>
@@ -41,7 +41,7 @@
         </div>
         <div class="hero2 container">
             <div class="hero1--info">
-                <h2>Выбор ВТ - 1</h2>
+                <h2>ВТ - 1</h2>
                 <h1>"Что же вы сделаете с находкой?" </h1>
                 <h3>Присвою себе        (50%)</h3>
                 <h4>Припрячу</h4>
@@ -51,11 +51,11 @@
         </div>
         <div class="hero3 container">
             <div class="hero1--info">
-                <h2>Выбор СР - 1</h2>
+                <h2>СР - 1</h2>
                 <h1>"А как вам быть завтра?..." </h1>
-                <h3>Это всё был сон себе</h3>
+                <h3>Детям тяжелее (78%)</h3>
                 <h4>Я сейчас заплачу</h4>
-                <h5>Детям тяжелее (78%)</h5>
+                <h5>Это всё был сон себе</h5>
             </div>
 
         </div>
