--- a/VoteMenu.html
+++ b/VoteMenu.html
@@ -22,10 +22,31 @@
                     <li><a href='VoteMenu.html'>Голосование</a></li>
                     <li><a href='ReadMenu.html'>Все Части</a></li>
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
-                    <li><a href='AboutMenu.html'>О проекте</a></li>
+                    <li><a href='AboutMenu.html'>Персонажи</a></li>
                 </ul>
                 <div class="hero container">
-        <h3>Голоса Учтёны.</h3>
+        <h3>Прояви себя!</h3>
     </div>
+            <h4></h4>
+    <!-- Online Test Pad Survey Widget (#57825)-->
+<div id="otp_wgt_dalgqwec56kik"></div>
+<script type="text/javascript">
+    var otp_wjs_dt = (new Date).getTime();
+    (function (w, d, n, s, rp) {
+        w[n] = w[n] || [];
+        rp = {};
+        w[n].push(function () {
+            otp_render_widget(d.getElementById("otp_wgt_dalgqwec56kik"), 'onlinetestpad.com', 'dalgqwec56kik', rp);
+        }); 
+        s = d.createElement("script");
+        s.type = "text/javascript";
+        s.src = "//onlinetestpad.com/js/widget.js?" + otp_wjs_dt;
+        s.async = true;
+        d.getElementsByTagName("head")[0].appendChild(s);
+    })(this, this.document, "otp_widget_callbacks");
+</script>
+    <h2> </h2>
+    <h4></h4>            
+
 </body>
-</html>
+</html>>
