--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href='VoteMenu.html'>Голосование</a></li>
                     <li><a href='ReadMenu.html'>Все Части</a></li>
                     <li><a href='HistoryMenu.html'>Произошедшее</a></li>
-                    <li><a href='AboutMenu.html'>О проекте</a></li>
+                    <li><a href='AboutMenu.html'>Персонажи</a></li>
                 </ul>
             </nav>
         </header>
@@ -33,9 +33,26 @@
             </div>
             <h3></h3>
             <h4>Новые Части</h4>
-            <img src="img/Fox.jpg" alt="">
-            <li><a href='ind_7.html'>Перейти</a></li>
+            <img src="img/Deer.jpg" alt="">
+            <li><a href='week1/ind_9ani.html'>Перейти</a></li>
+            <h3></h3>
 
+        </div>
+        <div class="hero01 container">
+            <div class="hero01--info">
+                <h2>Вы устраиваетесь работать учителем в обычную городскую школу.</h2>
+                <h2>Но, кроме ваших прямых обязанностей, вам впихивают классное руководство над выпускным классом.</h2>
+                <h2>Администрации требуется, чтобы вы каждую неделю выкладывали</h2>
+                <h2>отчет о каждом ученике в целях "сохранения качества народа".</h2></h2>
+                <h2>Вы будете вынуждены расспрашивать учеников об их личной жизни</h2>
+                <h2> и прочих проблемах, иначе рискуете подвергнуться репрессиям. Да здраствует Лушт!</h2>
+            </div>
+        </div>
+        <div class="hero1 container">
+            <div class="hero1--info">
+                <h2>В день вы будете успевать пообщаться с 3 учениками.</h2>
+                <h2> Делайте выбор с умом. Далеко не всё пройдёт бесследно.</h2>
+            </div>
         </div>
     </div>   
 </body>
