--- a/AboutMenu.html
+++ b/AboutMenu.html
@@ -27,77 +27,77 @@
              <div class="Id_0">
                 <h1></h1>
                 <img src="img/0001.jpg" alt="">
-                <h2>Макс Братскин</h2>
+                <h2>Макс Братскин (у1)</h2>
                 <h3></h3>
             <div class="Id_1">
                 <h1></h1>
                 <img src="img/0002.jpg" alt="">
-                <h2>Ника Водоль</h2>
+                <h2>Ника Водоль (у2)</h2>
                 <h3></h3>
             <div class="Id_2">
                 <h1></h1>
                 <img src="img/0003.jpg" alt="">
-                <h2>Майкл Грин</h2>
+                <h2>Майкл Грин (у3)</h2>
                 <h3></h3>
             <div class="Id_3">
                 <h1></h1>
                 <img src="img/0004.jpg" alt="">
-                <h2>Николя Квасов</h2>
+                <h2>Николя Квасов (у4)</h2>
                 <h3></h3>
             <div class="Id_4">
                 <h1></h1>
                 <img src="img/0005.jpg" alt="">
-                <h2>Нюра Кравчук</h2>
+                <h2>Нюра Кравчук (у5)</h2>
                 <h3></h3>
             <div class="Id_5">
                 <h1></h1>
                 <img src="img/0006.jpg" alt="">
-                <h2>Барсик Лесайл</h2>
+                <h2>Барсик Лесайл (у6)</h2>
                 <h3></h3>
             <div class="Id_6">
                 <h1></h1>
                 <img src="img/0007.jpg" alt="">
-                <h2>Ева Мясова</h2>
+                <h2>Ева Мясова (у7)</h2>
                 <h3></h3>
             <div class="Id_7">
                 <h1></h1>
                 <img src="img/0008.jpg" alt="">
-                <h2>Дора Набабки</h2>
+                <h2>Дора Набабки (у8)</h2>
                 <h3></h3>
             <div class="Id_8">
                 <h1></h1>
                 <img src="img/0009.jpg" alt="">
-                <h2>Вера Рудкова</h2>
+                <h2>Вера Рудкова (у9)</h2>
                 <h3></h3>
             <div class="Id_9">
                 <h1></h1>
                 <img src="img/0010.jpg" alt="">
-                <h2>???</h2>
+                <h2>Алиса Согуречная (у10)</h2>
                 <h3></h3>
             <div class="Id_10">
                 <h1></h1>
                 <img src="img/0011.jpg" alt="">
-                <h2>???</h2>
+                <h2>Анид Стрекозка (у11)</h2>
                 <h3></h3>
             <div class="Id_11">
                 <h1></h1>
                 <img src="img/0012.jpg" alt="">
-                <h2>???</h2>
+                <h2>??? (у12)</h2>
                 <h3></h3>
             <div class="Id_12">
                 <h1></h1>
                 <img src="img/0013.jpg" alt="">
-                <h2>???</h2>
+                <h2>??? (у13)</h2>
                 <h3></h3>
             <div class="Id_13">
                 <h1></h1>
-                <img src="img/0014.jpg" alt="">
-                <h2>???</h2>
+                <img src="img/0015.jpg" alt="">
+                <h2>??? (у14)</h2>
                 <h3></h3>
             <div class="Id_14">
                 <h1></h1>
-                <img src="img/0015.jpg" alt="">
-                <h2>???</h2>
+                <img src="img/0014.jpg" alt="">
+                <h2>??? (у15)</h2>
                 <h3></h3>
          </div>
        
