--- a/HistoryMenu.html
+++ b/HistoryMenu.html
@@ -59,6 +59,16 @@
             </div>
 
         </div>
+         <div class="hero4 container">
+            <div class="hero1--info">
+                <h2>ЧТ - 1</h2>
+                <h1>"...Может, стоит остаться...?" </h1>
+                <h3>Пойти на работу (60%)</h3>
+                <h4>Попробовать взять отгул</h4>
+                <h5>Договориться с коллегой на подмену</h5>
+            </div>
+
+        </div>
     </div>  
 </body>
 </html>
