--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
             <h3></h3>
             <h4>Новые Части</h4>
-            <img src="img/Deer.jpg" alt="">
-            <li><a href='week1/ind_9ani.html'>Перейти</a></li>
+            <img src="img/1111.jpg" alt="">
+            <li><a href='week1/ind_11.html'>Перейти</a></li>
             <h3></h3>
 
         </div>
